--- a/include/views/default/cockpit2/frontend/listview/listview-driver-summary.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-driver-summary.phtml
@@ -3,23 +3,26 @@
 		<tr>
 			<th>Type</th>
 			<th>Period</th>
-			<th>Amount</th>
+			<th>Earnings</th>
+			<th>Amount Already Collected in Cash</th>
+			<th>Deposit Amount</th>
 			<th>Status</th>
-			<th>Transfer Initiated</th>
+			<th>Deposit Initiated</th>
 			<th>Est. In Account</th>
 		</tr>
 		<tr ng-repeat="payment in summary.results" ng-show="!filter || filter == payment.type">
 			<td>
 				<a href="/drivers/payment/{{payment.id_payment_schedule}}">{{payment.type}}</a>
-				<span ng-if="payment.total_cash_orders" class="note">
-					<br>
-					*Already received in cash: ${{payment.total_received_cash | formatPrice}} + Cash Tips ({{payment.total_cash_orders}} orders)
-				</span>
 			</td>
 			<td>{{payment.range_date}}</td>
-			<td positive-or-negative-color="{{payment.amount}}">
+			<td positive-or-negative-color="{{payment.earnings}}">
+				${{payment.earnings | formatPrice}}
+			</td>
+			<td positive-or-negative-color="{{payment.collected_in_cash}}">
+				${{payment.collected_in_cash | formatPrice}}
+			</td>
+			<td positive-or-negative-color="{{payment.collected_in_cash}}">
 				${{payment.amount | formatPrice}}
-				<span ng-if="payment.total_cash_orders">*</span>
 			</td>
 			<td>
 				<span ng-class="{
