Hourly Drivers Overpaid for Cash Orders #5053

--- a/include/views/default/cockpit2/frontend/drivers/drivers-payment.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-payment.phtml
@@ -21,7 +21,7 @@
 					</tr>
 
 					<tr positive-or-negative-color="{{result.calcs.collected_in_cash}}">
-						<td>Additional Payment Due Through Deposit</td>
+						<td>Amount Already Collected in Cash</td>
 						<td>${{result.calcs.collected_in_cash | formatPrice}}</td>
 					</tr>
 
