--- a/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payment.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payment.phtml
@@ -132,6 +132,10 @@
 					<td>Markup</td>
 					<td>$ {{result.calcs.markup | formatPrice}}</td>
 				</tr>
+				<tr ng-if="result.calcs.delivery_fee_collected && pay_type_payment" positive-or-negative-color="{{result.calcs.markup}}">
+					<td>Delivery Fee Collected In Cash by Hourly Drivers</td>
+					<td>$ {{result.calcs.delivery_fee_collected | formatPrice}}</td>
+				</tr>
 				<tr ng-if="!result.hourly && result.calcs.credit_charge && pay_type_payment" positive-or-negative-color="{{result.calcs.credit_charge}}">
 					<td>Credit Card Charge</td>
 					<td>$ {{result.calcs.credit_charge | formatPrice}}</td>
@@ -260,11 +264,12 @@
 		<table class="tb-grid tb-zebra">
 			<thead ng-if="result.orders.included.length > 0 || result.orders.not_included.length > 0">
 				<tr>
-					<td colspan="8" class="title">Orders</td>
+					<td colspan="9" class="title">Orders</td>
 				</tr>
 			</thead>
 			<thead ng-if="!result.orders">
 				<tr>
+					<td></td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -288,6 +293,9 @@
 					<td>
 						<span ng-if="pay_type_payment">Delivery Fee</span>
 					</td>
+					<td>
+						<span ng-if="pay_type_payment">Delivery Fee (Collected in Cash)</span>
+					</td>
 					<td ng-if="pay_type_reimbursement">Reimbursement</td>
 					<td ng-if="pay_type_payment">Payment</td>
 				</tr>
@@ -301,11 +309,13 @@
 					<td>{{order.pay_type}}</td>
 					<td><span ng-if="pay_type_payment">$ {{order.tip | formatPrice}}</span></td>
 					<td><span ng-if="pay_type_payment">$ {{order.delivery_fee | formatPrice}}</span></td>
+					<td><span ng-if="pay_type_payment">$ {{order.delivery_fee_collected | formatPrice}}</span></td>
 					<td ng-if="pay_type_reimbursement">$ {{order.total_reimburse | formatPrice}}</td>
 					<td ng-if="pay_type_payment">$ {{order.total_payment | formatPrice}}</td>
 				</tr>
 			</tbody>
 			<tbody>
+			<?php /* ?>
 				<tr class="transparent">
 					<td></td>
 					<td></td>
@@ -416,6 +426,7 @@
 					<td></td>
 					<td></td>
 				</tr>
+				<?php */ ?>
 				<tr class="transparent"><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 			</tbody>
 		</table>
