--- a/include/views/default/cockpit2/frontend/settlement/settlement-drivers.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement-drivers.phtml
@@ -92,6 +92,7 @@
 						<td>Total Reimbursements</td>
 						<td>$ {{total_reimbursements | formatPrice}}</td>
 					</tr>
+
 					<tr positive-or-negative-color="{{total_payments}}">
 						<td>Total Payments</td>
 						<td>$ {{total_payments | formatPrice}}</td>
@@ -170,6 +171,7 @@
 					<td class="td-medium">Drivers</td>
 					<td>Type</td>
 					<td>Reimbursement</td>
+					<td>Total Delivery Fee <br>Collected In Cash</td>
 					<td>Payment</td>
 					<td>Total Spent</td>
 					<td>Standard Reimburse</td>
@@ -185,6 +187,7 @@
 					<td>{{driver.name}}</td>
 					<td>{{driver.pay_type.payment_type}}</td>
 					<td>$ {{driver.total_reimburse | formatPrice}}</td>
+					<td>$ {{driver.delivery_fee_collected | formatPrice}}</td>
 					<td>$ {{driver.total_payment | formatPrice}}</td>
 					<td>$ {{driver.total_spent | formatPrice}}</td>
 					<td>$ {{driver.standard_reimburse | formatPrice}}</td>
@@ -235,6 +238,12 @@
 				<td>Crunchbutton Fees</td>
 				<td>$ {{sum.restaurant_fee | formatPrice}}</td>
 			</tr>
+
+			<tr positive-or-negative-color="{{sum.delivery_fee_collected}}">
+				<td>Total Delivery Fee Collected In Cash by Hourly Drivers</td>
+				<td>$ {{sum.delivery_fee_collected | formatPrice}}</td>
+			</tr>
+
 			<tr positive-or-negative-color="{{sum.gift_card}}">
 				<td>Gift Card</td>
 				<td>$ {{sum.gift_card | formatPrice}}</td>
@@ -355,6 +364,10 @@
 								<tr positive-or-negative-color="{{driver.markup}}">
 									<td>Markup</td>
 									<td>$ {{driver.markup | formatPrice}}</td>
+								</tr>
+								<tr positive-or-negative-color="{{delivery_fee_collected}}">
+									<td>Total Delivery Fee Collected In Cash</td>
+									<td>$ {{delivery_fee_collected | formatPrice}}</td>
 								</tr>
 								<tr positive-or-negative-color="{{driver.credit_charge}}">
 									<td>Credit Card Charge</td>
