--- a/include/views/default/cockpit2/frontend/settlement/settlement-drivers.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement-drivers.phtml
@@ -367,7 +367,7 @@
 								</tr>
 								<tr positive-or-negative-color="{{delivery_fee_collected}}">
 									<td>Total Delivery Fee Collected In Cash</td>
-									<td>$ {{delivery_fee_collected | formatPrice}}</td>
+									<td>$ {{driver.delivery_fee_collected | formatPrice}}</td>
 								</tr>
 								<tr positive-or-negative-color="{{driver.credit_charge}}">
 									<td>Credit Card Charge</td>
