--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -44,6 +44,7 @@
 <script src="/assets/js/ladda.js"></script>
 <script src="/assets/js/jquery.autosize-min.js"></script>
 <script src="/assets/js/location.js"></script>
+<script src="/assets/js/howler-min.js"></script>
 
 <script src="/assets/cockpit/js/cockpit.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
