fixes #5337 add multiple lines for address

--- a/include/views/default/cockpit2/frontend/staff/staff-payinfo.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-payinfo.phtml
@@ -35,7 +35,7 @@
 				<li class="li-input" ng-class="{'error':form.basicAddress.$invalid}">
 					<div class="label">Address:</div>
 					<div class="input">
-					<textarea name="basicAddress" ng-model="payInfo.address" placeholder="Address"></textarea>
+					<textarea name="basicAddress" ng-model="payInfo.address" placeholder="Address" rows="4"></textarea>
 					<div class="box-error"></div>
 				</li>
 
