--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3962,3 +3962,7 @@ body[class*=" page-drivers-welcome-"] .nav-top .nav-back {
 .phonegap .top-pad {
 	height: 66px;
 }
+
+.li-input-line-height {
+	line-height: 1.5em;
+}
