--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -33,7 +33,7 @@
 		<br><br>
        <a name="deliveryBasics"></a>
         <b>How can we make your driving experience more awesome?</b><br>
-		 <a href="/drivers/feedback"  target="_system">Send us anonymous feedback!</a>
+		 <a href="/drivers/feedback">Send us anonymous feedback!</a>
 
 		<br><br>
 <!--delivery basics section-->
