--- a/include/views/default/cockpit2/frontend/communities/communities-community.phtml
+++ b/include/views/default/cockpit2/frontend/communities/communities-community.phtml
@@ -122,7 +122,13 @@
 
 
 	<div class="right">
-		<p><a href="/orders?community={{community.id_community}}">View all orders</a></p>
+		<p>
+			<a href="/orders?limit=100&page=1&search=&restaurant=&community={{community.id_community}}&date=&view=map">Map last 100 orders</a> | 
+			<a href="/orders?community={{community.id_community}}">View all orders</a>
+		</p>
+
+
+
 	</div>
 
 	<br><br>
