--- a/include/views/default/cockpit2/frontend/restaurants/restaurants-restaurant.phtml
+++ b/include/views/default/cockpit2/frontend/restaurants/restaurants-restaurant.phtml
@@ -13,7 +13,7 @@
 	<div class="bar-loader bar-loader-search" ng-class="{'bar-loader-loading': loading}"></div>
 	<br>
 	
-	<div>
+	<div class="no-support-boxes">
 		<div class="support-boxes-column">
 			<div class="support-box-wrap">
 				<h1>Details</h1>
@@ -57,56 +57,51 @@
 			</div>
 		</div>
 		
-
-		<h1 class="title"><i class="fa fa-car"></i>Orders</h1>		
-
-		<div class="bar-loader bar-loader-title" ng-class="{'bar-loader-loading': loadingOrders}"></div>
-		<div class="box-content2 box-content-table">
-			<table class="tb-zebra">
-				<tr>
-					<th>Info</th>
-					<th>Date</th>
-					<th>Restaurant</th>
-					<th>Driver</th>
-					<th>Order</th>
-					<th>Status</th>
-				</tr>
-				<tr ng-repeat="order in orders">
-					<td><a href="/order/{{order.id_order}}">{{order.id_order}}</td>
-					<td>{{order.date | localtime | timestamp | date:'MM/dd @ HH:mm'}}</td>
-					<td>
-						<a href="/restaurant/{{order.id_restaurant}}">{{order._restaurant_name}}</a><br>
-						<a href="/community/{{order._community_name}}">{{order._community_name}}</a>
-					</td>
-					<td><a href="/staff/{{order.status.driver.id_admin}}">{{order.status.driver.name}}</a></td>
-					<td>${{order.final_price_plus_delivery_markup}}</td>
-					<td>
-						<b>{{order.status.status}}</b><br>
-						<span ng-if="order.status"><span am-time-ago="order.status.date | localtime | timestamp"></span></span>
-					</td>
-				</tr>
-			</table>
-		</div>
-		
-		<table class="tb-pagination right" ng-if="pages > 1" page-key>
-			<tbody>
-				<tr>
-					<td class="td-prev"><button class="button orange" ng-if="query.page > 1" ng-click="setPage(query.page-1)">prev</button></td>
-					<td class="td-info">Page {{query.page}} of {{pages}}</td>
-					<td class="td-next"><button class="button orange" ng-if="query.page < pages" ng-click="setPage(query.page+1)">next</button></td>
-				</tr>
-			</tbody>
-		</table>
-		
 		<div class="divider"></div>
-		
-		
-		
-		
-		
-		
-	
+
 	</div>
+	<h1 class="title"><i class="fa fa-car"></i>Orders</h1>		
+
+	<div class="bar-loader bar-loader-title" ng-class="{'bar-loader-loading': loadingOrders}"></div>
+	<div class="box-content2 box-content-table">
+		<table class="tb-zebra">
+			<tr>
+				<th>Info</th>
+				<th>Date</th>
+				<th>Restaurant</th>
+				<th>Driver</th>
+				<th>Order</th>
+				<th>Status</th>
+			</tr>
+			<tr ng-repeat="order in orders">
+				<td><a href="/order/{{order.id_order}}">{{order.id_order}}</td>
+				<td>{{order.date | localtime | timestamp | date:'MM/dd @ HH:mm'}}</td>
+				<td>
+					<a href="/restaurant/{{order.id_restaurant}}">{{order._restaurant_name}}</a><br>
+					<a href="/community/{{order._community_name}}">{{order._community_name}}</a>
+				</td>
+				<td><a href="/staff/{{order.status.driver.id_admin}}">{{order.status.driver.name}}</a></td>
+				<td>${{order.final_price_plus_delivery_markup}}</td>
+				<td>
+					<b>{{order.status.status}}</b><br>
+					<span ng-if="order.status"><span am-time-ago="order.status.date | localtime | timestamp"></span></span>
+				</td>
+			</tr>
+		</table>
+	</div>
+
+	<table class="tb-pagination right" ng-if="pages > 1" page-key>
+		<tbody>
+			<tr>
+				<td class="td-prev"><button class="button orange" ng-if="query.page > 1" ng-click="setPage(query.page-1)">prev</button></td>
+				<td class="td-info">Page {{query.page}} of {{pages}}</td>
+				<td class="td-next"><button class="button orange" ng-if="query.page < pages" ng-click="setPage(query.page+1)">next</button></td>
+			</tr>
+		</tbody>
+	</table>
+
+	<div class="divider"></div>
+
 
 </div>
 
