--- a/include/views/default/cockpit2/frontend/listview/listview-communities.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-communities.phtml
@@ -12,7 +12,7 @@
 			<th class="tb-small"></th>
 		</tr>
 		<tr ng-repeat="community in communities track by $index" ng-attr-tabindex="{{$index+1}}" tab-select="/community/{{community.permalink || community.id_community}}">
-			<td>
+			<td nowrap>
 				<span class="listview-bold">{{community.name}}</span>
 				<br>{{community.timezone}}
 			</td>
