fixed view link

--- a/include/views/default/cockpit2/frontend/listview/listview-communities.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-communities.phtml
@@ -53,7 +53,7 @@
 			<td nowrap>
 				<a href="/community/edit/{{community.permalink}}"><button class="button button-empty button-empty-green"><i class="fa fa-pencil"></i>&nbsp;&nbsp;Edit</button></a>
 				&nbsp;
-				<a href="/community/edit/{{community.permalink}}"><button class="button button-empty button-empty-green"><i class="fa fa-folder"></i>&nbsp;&nbsp;View</button></a>
+				<a href="/community/{{community.permalink}}"><button class="button button-empty button-empty-green"><i class="fa fa-folder"></i>&nbsp;&nbsp;View</button></a>
 			</td>
 		</tr>
 	</table>
