--- a/include/views/default/cockpit2/frontend/listview/listview-communities.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-communities.phtml
@@ -14,15 +14,15 @@
 		<tr ng-repeat="community in communities track by $index" ng-attr-tabindex="{{$index+1}}" tab-select="/community/{{community.permalink || community.id_community}}">
 			<td nowrap>
 				<span class="listview-bold">{{community.name}}</span>
-				<br>{{community.timezone}}
+				<br><span class="listview-smaller listview-light">{{community.timezone}}</span>
 			</td>
-			<td class="tb-center"><a href="/restaurants?community={{community.id_community}}">{{community.restaurants}}</a></td>
+			<td class="tb-center"><a href="/restaurants?community={{community.id_community}}" class="listview-smaller">{{community.restaurants}}</a></td>
 			<? /* <td class="tb-center"><a href="/staff?limit=20&page=1&search={{community.name}}&type=driver&status=active&working=all&pexcard=all">{{community.drivers}}</a></td>*/ ?>
 			<td>
-				<span ng-if="community._order_date"><span am-time-ago="community._order_date | localtime | timestamp"></span></span>
+				<span ng-if="community._order_date" class="listview-smaller"><span am-time-ago="community._order_date | localtime | timestamp"></span></span>
 			</td>
 			<td>
-				<span ng-if="community.close_all_restaurants && community.is_auto_closed || community.close_3rd_party_delivery_restaurants">
+				<span class="listview-smaller" ng-if="community.close_all_restaurants && community.is_auto_closed || community.close_3rd_party_delivery_restaurants">
 					<span class="listview-bold">{{community.closedLog.closed_by}}</span> @ {{community.closedLog.closed_at}}<br>
 					<span class="listview-bold">{{community.closedLog.type}}</span> {{community.closedLog.note}}
 				</span>
@@ -41,25 +41,24 @@
 				</span>
 				*/ ?>
 			</td>
-			<td class="tb-center">
+			<td class="tb-center tb-v-center">
 				<span class="tag tag-red" ng-if="community.close_all_restaurants && community.is_auto_closed || community.close_3rd_party_delivery_restaurants">Closed</span>
 				<span class="tag tag-green" ng-if="!community.close_all_restaurants && !community.is_auto_closed  && !community.close_3rd_party_delivery_restaurants">Open</span>
 			</td>
-			<td nowrap class="tb-center">
+			<td nowrap class="tb-center tb-v-center">
 				<span class="tag tag-green" ng-if="community.auto_close">Enabled</span>
 				<span class="tag tag-red" ng-if="!community.auto_close">Disabled</span>
 			</td>
-			<td class="tb-center">
+			<td class="tb-center tb-v-center">
 				<span class="tag tag-orange" ng-if="community.type == '3rd'">3rd</span>
 				<span class="tag tag-blue" ng-if="community.type == '1st'">1st</span>
 				<span class="tag tag-purple" ng-if="community.type == 'both'">Both</span>
 				<span class="tag tag-lightgrey" ng-if="community.type == 'none'">None</span>
 				<span class="tag tag-lightgrey" ng-if="community.type == 'takeout'">Takeout</span>
 			</td>
-			<td nowrap>
+			<td nowrap class="tb-v-center">
 				<a href="/community/edit/{{community.permalink}}"><button class="button button-empty button-empty-green"><i class="fa fa-pencil"></i>&nbsp;&nbsp;Edit</button></a>
-				&nbsp;
-				<a href="/community/{{community.permalink}}"><button class="button button-empty button-empty-green"><i class="fa fa-folder"></i>&nbsp;&nbsp;View</button></a>
+				<a href="/community/{{community.permalink}}"><button class="button button-empty button-empty-green"><i class="fa fa-eye"></i>&nbsp;&nbsp;View</button></a>
 			</td>
 		</tr>
 	</table>
