--- a/include/views/default/cockpit2/frontend/listview/listview-restaurants.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-restaurants.phtml
@@ -2,12 +2,14 @@
 	<table class="tb-zebra">
 		<tr>
 			<th></th>
-			<th>ID</th>
 			<th>Name</th>
-			<th>Phone</th>
-			<th>Address</th>
+			<th>Contact</th>
 			<th class="tb-center">Orders</th>
 			<th>Last&nbsp;Order</th>
+			<th class="tb-small">Active</th>
+			<th class="tb-small">Open</th>
+			<th class="tb-small">Deilvery</th>
+			<th class="tb-small"></th>
 		</tr>
 		<tr ng-repeat="restaurant in restaurants track by $index" ng-class="{ 'delivery_it_self': restaurant.delivery_it_self }" ng-attr-tabindex="{{$index+1}}" tab-select="/restaurant/{{restaurant.permalink}}">
 			<td class="tb-image-row"><a href="/restaurant/{{restaurant.permalink}}">
@@ -16,23 +18,53 @@
 					<div ng-if="!restaurant.image" class="customer-image restaurant-image-null"></div>
 				</div>
 			</a></td>
-			<td><a href="/restaurant/{{restaurant.permalink}}">{{restaurant.id_restaurant}}</a></td>
 			<td>
 				<span class="listview-bold">{{restaurant.name}}</span><br>
 				<span ng-if="!community">
-					<span class="staff-community-repeat" ng-repeat="community in restaurant.communities">
+					<span class="staff-community-repeat listview-smaller" ng-repeat="community in restaurant.communities">
 						<a href="/community/{{community.permalink}}">{{community.name}}</a>
 					</span>
 				</span>
 			</td>
-			<td nowrap><a href ng-click="callText(restaurant.phone)">{{restaurant.phone | formatPhone}}</a></td>
-			<td>{{restaurant.address | formatAddress}}</td>
-
+			<td>
+				<span class="listview-smaller">
+					<a href ng-click="callText(restaurant.phone)">{{restaurant.phone | formatPhone}}</a>
+				</span>
+				<br>
+				<span class="listview-smaller">
+					{{restaurant.address | formatAddress}}
+				</span>
+			</td>
 			<td class="tb-center">
 				<a href="/orders?restaurant={{restaurant.id_restaurant}}" ng-if="restaurant.orders != '0'">{{restaurant.orders}}</a>
 				<span ng-if="restaurant.orders == '0'">0</span>
 			</td>
 			<td><span ng-if="restaurant._order_date"><span am-time-ago="restaurant._order_date"></span></span></td>
+	
+	
+			<td nowrap class="tb-center tb-v-center">
+				<span class="tag tag-green" ng-if="restaurant.active">Active</span>
+				<span class="tag tag-red" ng-if="!restaurant.active">Inactive</span>
+			</td>
+			<td nowrap class="tb-center tb-v-center">
+				<span class="tag tag-red" ng-if="!restaurant.open_for_business">Closed</span>
+					<span ng-if="restaurant.open_for_business">
+					<span class="tag tag-green" ng-if="restaurant.open">Open</span>
+					<span class="tag tag-red" ng-if="!restaurant.open">Closed</span>
+				</span>
+			</td>
+			<td class="tb-center tb-v-center">
+				<span class="tag tag-orange" ng-if="restaurant.delivery && restaurant.delivery_service">3rd</span>
+				<span class="tag tag-blue" ng-if="restaurant.delivery && !restaurant.delivery_service">1st</span>
+				<span class="tag tag-lightgrey" ng-if="restaurant.takeout && !restaurant.delivery">Takeout</span>
+				<span class="tag tag-lightgrey" ng-if="!restaurant.takeout && !restaurant.delivery">None</span>
+			</td>
+			<td nowrap class="tb-v-center">
+				<a href="https://cockpit.crunchbutton.com/restaurants/{{restaurant.id_restaurant}}" target="_system"><button class="button button-empty button-empty-green"><i class="fa fa-pencil"></i>&nbsp;&nbsp;Edit</button></a>
+				<a href="/restaurant/{{restaurant.permalink}}"><button class="button button-empty button-empty-green"><i class="fa fa-eye"></i>&nbsp;&nbsp;View</button></a>
+			</td>
+	
+
 		</tr>
 	</table>
 </div>
