--- a/include/views/default/cockpit2/frontend/drivers/drivers-accept-nav.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-accept-nav.phtml
@@ -4,7 +4,7 @@
 	<div ng-if="oc.order.status.status == 'new'">
 		<div class="box-content-nav-box box-content-new box-order-status">
 			<div class="message">
-				
+
 				<div class="dialog-subtext">You <b>must</b> mark orders as accepted,<br> picked up, and delivered to get</br> paid correctly.</div>
 
 				<a class="order-action-undo" href ng-click="oc.reject()">reject</a>
@@ -62,7 +62,7 @@
 			<div class="message">
 				You delivered this order @ {{oc.order.status.timestamp*1000 | date: 'h:mm a'}}
 				<br><br>
-				<a class="order-action-undo" ng-click="undo()">undo</a>
+				<a class="order-action-undo" ng-click="oc.undo()">undo</a>
 			</div>
 			<div class="divider"></div>
 		</div>
